--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["David Hecker <heckerdw@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+vercel = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
